# coretime-demo

./: Cargo.toml  README.md
metadata-files/: coretime-rococo.scale  rococo.scale
src/: main.rs
