[package]
name = "coretime-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
zombienet-sdk = "0.2.17"
tokio = "1.41.1"
tracing-subscriber = "0.3.18"
anyhow = "1.0"
tracing = "0.1"
subxt = { version = "0.38", features = ["substrate-compat"] }
subxt-signer = { version = "0.38", features = ["subxt"] }


